app/indexer/next/patch-indexer-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: indexer
  namespace: kaspa
spec:
  serviceName: next-indexer
  selector:
    matchLabels:
      app: next-indexer
  template:
    metadata:
      labels:
        app: next-indexer
    spec:
      containers:
        - name: indexer
          image: kkluster/kasia-indexer@sha256:cfe818e567c170d8660fbfd2fcc4ae4f8554e1a3813f2032e9809392acb5ac09
---
apiVersion: v1
kind: Service
metadata:
  name: indexer
  labels:
    app: next-indexer
  namespace: kaspa
spec:
  selector:
    app: next-indexer
